objects/SBC__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_or_Declined_Time__c</fullName>
        <description>Intermediate Field For Approval Or Declined Date</description>
        <formula>CASE(MOD( SBC_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Approved_or_Declined_Date__c - SBC_Check_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Approved_or_Declined_Date__c - SBC_Check_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Approved_or_Declined_Date__c - SBC_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Approved_or_Declined_Date__c - SBC_Check_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Approved_or_Declined_Date__c - SBC_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Approved_or_Declined_Date__c - SBC_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Approved_or_Declined_Date__c - SBC_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Approved_or_Declined_Date__c - SBC_Check_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval or Declined Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>SBC</relationshipLabel>
        <relationshipName>SBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Pending_Correction_Record_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is True If Pending Correction Record Present, Else False.</description>
        <label>Is Pending Correction Record Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Count__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Quote.TotalMembers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_SBC_Date__c</fullName>
        <description>Original SBC Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SBC Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;),Tech_Support_SBC__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Not_Started__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Time__c</fullName>
        <description>Intermediate Pending Correction Date field</description>
        <formula>CASE(MOD( SBC_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_Date__c -  SBC_Check_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_Date__c -  SBC_Check_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_Date__c -  SBC_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_Date__c -  SBC_Check_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_Date__c -  SBC_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_Date__c -  SBC_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_Date__c -  SBC_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Pending_Correction_Date__c -  SBC_Check_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Check_Date__c</fullName>
        <description>Captures Date When The SBC Check Field Is True</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures Date When The SBC Check Field Is True</inlineHelpText>
        <label>SBC Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBC_Check__c</fullName>
        <description>US16784</description>
        <formula>Implementation_Tracking_ID__r.SBC_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBC_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBC_Custom__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Want_the_SBC_created_by_the_SBC_team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBC Custom?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_ECD__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBC ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBC_Request_and_CIP_Log__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Record_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBC Request # and CIP Log #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_State__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBC State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Work_Type__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBC Work Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01A Assign to UW</fullName>
                </value>
                <value>
                    <fullName>01AA Submitted To CIC</fullName>
                </value>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support_SBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support SBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- SBC Pending Correction Time</description>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- SBC Pending Correction Time</description>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Plans__c</fullName>
        <formula>Implementation_Tracking_ID__r.Total_No_of_Plans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_SBC_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_SBC_Date__c)/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White_Glove__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.White_Glove__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>White Glove</label>
        <type>Text</type>
    </fields>
    <label>SBC</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_SBC_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <label>All SBC - Key Account</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_SBC_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>Unassigned SBC - Key Account</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_SBC_Local</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>Unassigned SBC - Local</label>
    </listViews>
    <nameField>
        <displayFormat>SBC-{0000}</displayFormat>
        <label>SBC Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SBC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>